--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400&family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="background_style.css">
     <link rel="stylesheet" href="index.css">
-    
+    <link rel="stylesheet" href="../CoffeeShopPage/index.css">
+    <link rel="stylesheet" href="../CoffeeShopPage/index.js">
     <script src="index.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
