--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="../CoffeeShopPage/index.css">
     <link rel="stylesheet" href="../CoffeeShopPage/index.js">
+    <link rel="stylesheet" href="../CoffeeShopPage/Images/">
     <script src="index.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
