--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400&family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="background_style.css">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="../CoffeeShopPage/index.css">
+    <link rel="stylesheet" href="./Home/index.css">
     <link rel="stylesheet" href="../CoffeeShopPage/index.js">
     <link rel="stylesheet" href="../CoffeeShopPage/Images/">
     <script src="index.js" defer></script>
