--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="./Home/index.css">
     <link rel="stylesheet" href="../CoffeeShopPage/index.js">
-    <link rel="stylesheet" href="../CoffeeShopPage/Images/">
+    <link rel="stylesheet" href="../CoffeeShopPage/Home/index.html">
     <script src="index.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
 </head>
 <body>
  <nav class="navbar">
-     <div class="brand-title"><img src="../Images/zlogo.jpeg"></div>
+     <div class="brand-title"><img src="./Images/logo2.png"></div>
      <a href="#" class ="toggle-button">
          <span class="bar"></span>
          <span class="bar"></span>
@@ -25,13 +25,13 @@
      </a>
      <div class="navbar-links">
          <ul>
-             <li><a href="../Home/index.html">Home</a></li>
-             <li><a href="../About Us/about.html">About</a></li>
-             <li><a href="../Menu/menu.html">Menu</a></li>
-             <li><a href="../Product/product.html">Product</a></li>
-             <li><a href="../Review/review.html">Review</a></li>
-             <li><a href="../Contact/contact.html">Contact</a></li>
-             <li><a href="../Blogs/blogs.html">Blogs</a></li>
+             <li><a href="./index.html">Home</a></li>
+             <li><a href="./About Us/about.html">About</a></li>
+             <li><a href="./Menu/menu.html">Menu</a></li>
+             <li><a href="./Product/product.html">Product</a></li>
+             <li><a href="./Review/review.html">Review</a></li>
+             <li><a href="./Contact/contact.html">Contact</a></li>
+             <li><a href="./Blogs/blogs.html">Blogs</a></li>
              
          </ul>
      </div>
@@ -51,7 +51,7 @@
  <div class="footer">
         <div class="inner_footer">
             <div class="logo_container">
-                <img src="../Images/zlogo.jpeg">
+                <img src="./Images/zlogo.jpeg">
             </div>
             <div class="footer_third">
                 <h1>Need Help ?</h1>
