--- a/Product/product.html
+++ b/Product/product.html
@@ -35,18 +35,18 @@
 
 <div class="wrapper">
     <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-7.jpeg"></a></div>
-    <div class="box"><img src ="../Images/COF-1.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-2.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-4.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-5.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-3.jpeg"></div>
+    <div class="box"><a href="#"><img src ="../Images/COF-1.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-2.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-4.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"></a><img src ="../Images/COF-5.jpeg"></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-3.jpeg"></a></div>
 
-    <div class="box"><img src ="../Images/COF-6.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-7.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-8.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-10.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-9.jpeg"></div>
-    <div class="box"><img src ="../Images/COF-2.jpeg"></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-6.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-7.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-8.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-10.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-9.jpeg"></a></div>
+    <div class="box"><a href="https://splitrailcoffee.com/single-origin-coffee/?gclid=Cj0KCQiAraSPBhDuARIsAM3Js4p40Bl0UIwtUZQHj6MaKd_Fq1o80pRMJ49bUCpq4clVomhl6i3ZOe4aApa9EALw_wcB"><img src ="../Images/COF-2.jpeg"></a></div>
 </div>
 <!----------------------------footer start here-->
 <div class="footer">
