all files are updated

--- a/Blogs/blogs.html
+++ b/Blogs/blogs.html
@@ -37,55 +37,55 @@
        <div class="grid-item">
            <img src="../Images/blog-9.jpeg">
            <p>
-               <a href="https://www.ncausa.org/About-Coffee/History-of-Coffee">learn more</a></p>
+               <a href="https://www.ncausa.org/About-Coffee/History-of-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-12.jpeg">
            <p>
-               <a href="https://www.ncausa.org/Decaffeinated-Coffee">learn more</a></p>
+               <a href="https://www.ncausa.org/Decaffeinated-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-11.jpeg">
            <p>
-               <a href="https://www.ncausa.org/About-Coffee/How-to-Store-Coffee">learn more</a></p>
+               <a href="https://www.ncausa.org/About-Coffee/How-to-Store-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-10.jpeg">
-           <p><a href="https://www.ncausa.org/About-Coffee/How-to-Brew-Coffee">learn more</a></p>
+           <p><a href="https://www.ncausa.org/About-Coffee/How-to-Brew-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-2.jpeg">
-           <p><a href="https://www.ncausa.org/About-Coffee/Coffee-Roasts-Guide">learn more</a></p>
+           <p><a href="https://www.ncausa.org/About-Coffee/Coffee-Roasts-Guide">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-7.jpeg">
-           <p><a href="https://www.ncausa.org/About-Coffee/Coffee-Around-the-World">learn more</a></p>
+           <p><a href="https://www.ncausa.org/About-Coffee/Coffee-Around-the-World">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-6.jpeg">
-           <p><a href="https://www.ncausa.org/About-Coffee/Coffee-Health">learn more</a></p>
+           <p><a href="https://www.ncausa.org/About-Coffee/Coffee-Health">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-5.jpeg">
-           <p><a href="https://www.ncausa.org/About-Coffee/Organic-Coffee">learn more</a></p>
+           <p><a href="https://www.ncausa.org/About-Coffee/Organic-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-4.jpeg">
-           <p><a href="https://www.ncausa.org/About-Coffee/What-is-Coffee">learn more</a></p>
+           <p><a href="https://www.ncausa.org/About-Coffee/What-is-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-3.jpeg">
-           <p><a href="https://www.ncausa.org/About-Coffee/What-is-Coffee">learn more</a></p>
+           <p><a href="https://www.ncausa.org/About-Coffee/What-is-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-2.jpeg">
            <p>
-               <a href="https://www.ncausa.org/About-Coffee/What-is-Coffee">learn more</a></p>
+               <a href="https://www.ncausa.org/About-Coffee/What-is-Coffee">learn More</a></p>
        </div>
        <div class="grid-item">
            <img src="../Images/blog-1.jpeg">
            <p>
-               <a href="https://www.ncausa.org/About-Coffee/History-of-Coffee">learn more</a></p>
+               <a href="https://www.ncausa.org/About-Coffee/History-of-Coffee">learn More</a></p>
        </div>
        
        
