--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
             </div>
             <div class="footer_third">
                 <h1>More</h1>
-                <a href="#">Brouchures</a>
+                <a href="#">Information</a>
                 <a href="#">Shop</a>
                 <a href="#"></a>
-                <a href="#">Immpact Reports</a>
+                <a href="#">Online Order</a>
                 
             </div>
             <div class="footer_third">
-                <h1>Follw us</h1>
+                <h1>Follow us</h1>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-instagram"></i></a></li><br>
                 <span>
-                    best coffee breiw in us<br>
-                    Silver spring Md 112233344<br>
-                    Unit 234 coffee factory<br>
-                    silver spring<br>
+                    Best Coffee Brew in us<br>
+                    Silver Spring Md 112233344<br>
+                    Unit 234 Coffee Factory<br>
+                    Silver Spring<br>
                 </span>
 
                 
