--- a/Home/index.html
+++ b/Home/index.html
@@ -37,10 +37,10 @@
  <!------------------------------------navbar up-->
  <!--------------------------body start here------>
    <div class="text-blocks">
-       <h1 style="color: white;text-align: center; margin-top: 2rem;">ENJOY</h1><br>
-    <h1 style="color: white;text-align: center;">FRESH COFFEE IN THE</h1><br>
-    <h1 style="color: white;text-align: center;" >MORNING</h1>
-       <button class="button"><a href="https://www.ncausa.org/about-coffee/history-of-coffee">Learn More</a></button>
+       <h1 style="color: rgb(214, 160, 11);text-align: center; margin-top: 2rem;">ENJOY</h1><br>
+    <h1 style="color:  rgb(214, 160, 11);text-align: center;">FRESH COFFEE IN THE</h1><br>
+    <h1 style="color:  rgb(214, 160, 11);text-align: center;" >MORNING</h1>
+       <button class="button"><a href="../Menu/menu.html">Learn More</a></button>
   </div>
   
  
@@ -58,10 +58,10 @@
             </div>
             <div class="footer_third">
                 <h1>More</h1>
-                <a href="#">Brouchures</a>
+                <a href="#">Information</a>
                 <a href="#">Shop</a>
                 <a href="#"></a>
-                <a href="#">Immpact Reports</a>
+                <a href="#">Online Order</a>
                 
             </div>
             <div class="footer_third">
@@ -70,10 +70,10 @@
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-instagram"></i></a></li><br>
                 <span>
-                    best coffee breiw in us<br>
-                    Silver spring Md 112233344<br>
-                    Unit 234 coffee factory<br>
-                    silver spring<br>
+                    Best Coffee Brew In Us<br>
+                    Silver Spring Md 112233344<br>
+                    Unit 234 Coffee Factory<br>
+                    Silver Spring<br>
                 </span>
 
                 
