--- a/Home/index.html
+++ b/Home/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive navbar</title>
+    <title>CoffeeShopPage</title>
 </head>
 <body>
  <nav class="navbar">
@@ -40,7 +40,7 @@
        <h1 style="color: rgb(214, 160, 11);text-align: center; margin-top: 2rem;">ENJOY</h1><br>
     <h1 style="color:  rgb(214, 160, 11);text-align: center;">FRESH COFFEE IN THE</h1><br>
     <h1 style="color:  rgb(214, 160, 11);text-align: center;" >MORNING</h1>
-       <button class="button"><a href="../Menu/menu.html">Learn More</a></button>
+       <button class="button"><a href="../Menu/menu.html">Test Our Coffee</a></button>
   </div>
   
  
