--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
        <h1 style="color: white;text-align: center; margin-top: 2rem;">ENJOY</h1><br>
     <h1 style="color: white;text-align: center;">FRESH COFFEE IN THE</h1><br>
     <h1 style="color: white;text-align: center;" >MORNING</h1>
-       <button class="button"><a href="https://www.ncausa.org/about-coffee/history-of-coffee">Learn More</a></button>
+       <button class="button"><a href="./Menu/menu.html">Test Our Coffee</a></button>
   </div>
   
  
